
= Changelog
:toc: preamble
:project-url: https://github.com/sorairolake/rscrypt
:compare-url: {project-url}/compare
:issue-url: {project-url}/issues
:pull-request-url: {project-url}/pull

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/[Keep a Changelog], and this
project adheres to https://semver.org/[Semantic Versioning].

== {compare-url}/v0.6.2\...v0.6.3[0.6.3] - 2023-10-03

=== Removed

* Remove version from the book ({pull-request-url}/287[#287])

== {compare-url}/v0.6.1\...v0.6.2[0.6.2] - 2023-09-30

=== Added

* Add the usage to the book ({pull-request-url}/265[#265])

== {compare-url}/v0.6.0\...v0.6.1[0.6.1] - 2023-09-12

=== Changed

* Rewrite the book with Antora ({pull-request-url}/262[#262])

== {compare-url}/v0.5.10\...v0.6.0[0.6.0] - 2023-09-07

=== Changed

* Bump MSRV to 1.70.0 ({pull-request-url}/248[#248])

== {compare-url}/v0.5.9\...v0.5.10[0.5.10] - 2023-09-03

=== Changed

* Update dependencies

== {compare-url}/v0.5.8\...v0.5.9[0.5.9] - 2023-08-18

=== Changed

* Change `SPDX-FileCopyrightText` of each file to include only the year of
  initial publication ({pull-request-url}/218[#218])
* Remove unnecessary newline after period ({pull-request-url}/219[#219])

== {compare-url}/v0.5.7\...v0.5.8[0.5.8] - 2023-08-11

=== Changed

* Make the display of information about the encryption parameters similar to
  the reference implementation ({pull-request-url}/213[#213])

== {compare-url}/v0.5.6\...v0.5.7[0.5.7] - 2023-08-09

=== Changed

* Rename value of `--max-memory` option ({pull-request-url}/199[#199])
* Use LZMA instead of LZMA2 in 7z format for pre-built binary
  ({pull-request-url}/200[#200])

== {compare-url}/v0.5.5\...v0.5.6[0.5.6] - 2023-08-03

=== Changed

* Change the comment header to the format recommended by the REUSE
  Specification ({pull-request-url}/180[#180])
* Make this project REUSE compliant ({pull-request-url}/181[#181])
