@@ -8,7 +8,7 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
-    open-pull-requests-limit: 25
+    open-pull-requests-limit: 20
 
   - package-ecosystem: "github-actions"
     directory: "/"
