@@ -37,7 +37,6 @@ path = "src/main.rs"
 [dependencies]
 anyhow = "1.0.75"
 byte-unit = "4.0.19"
-ciborium = { version = "0.2.1", optional = true }
 clap = { version = "4.4.7", features = ["derive", "wrap_help"] }
 clap_complete = "4.4.4"
 clap_complete_nushell = "4.4.2"
@@ -45,27 +44,20 @@ dialoguer = { version = "0.11.0", default-features = false, features = ["passwor
 fraction = { version = "0.14.0", default-features = false }
 humantime = "2.1.0"
 once_cell = "1.18.0"
-rmp-serde = { version = "1.1.2", optional = true }
 scryptenc = "0.8.3"
 serde = { version = "1.0.190", features = ["derive"], optional = true }
 serde_json = { version = "1.0.108", optional = true }
-serde_yaml = { version = "0.9.27", optional = true }
 sysexits = "0.7.4"
 sysinfo = "0.29.10"
 thiserror = "1.0.50"
-toml = { version = "0.8.6", optional = true }
 
 [dev-dependencies]
 assert_cmd = "2.0.12"
 predicates = "3.0.4"
 
 [features]
-default = ["cbor", "json", "msgpack", "toml", "yaml"]
-cbor = ["dep:ciborium", "dep:serde"]
+default = ["json"]
 json = ["dep:serde", "dep:serde_json"]
-msgpack = ["dep:rmp-serde", "dep:serde"]
-toml = ["dep:serde", "dep:toml"]
-yaml = ["dep:serde", "dep:serde_yaml"]
 
 [profile.release]
 lto = true
