@@ -4,7 +4,7 @@
 
 = rscrypt-info(1)
 // Specify in UTC.
-:docdate: 2023-07-17
+:docdate: 2023-11-04
 :doctype: manpage
 ifdef::revnumber[:mansource: rscrypt {revnumber}]
 :manmanual: General Commands Manual
@@ -30,42 +30,10 @@ _FILE_::
 
 == OPTIONS
 
-ifdef::cbor,json,msgpack,toml,yaml,env-github,site-gen-antora[]
-*-f*, *--format* _FORMAT_::
-
-  Output format.
-
-  The possible values are:{blank}:::
-
-ifdef::cbor,env-github,site-gen-antora[]
-    *cbor*::::
-
-      Concise Binary Object Representation.
-endif::cbor,env-github,site-gen-antora[]
-
 ifdef::json,env-github,site-gen-antora[]
-    *json*::::
+*-j*, *--json*::
 
-      JavaScript Object Notation.
-endif::json,env-github,site-gen-antora[]
-
-ifdef::msgpack,env-github,site-gen-antora[]
-    *msgpack*::::
-
-      MessagePack.
-endif::msgpack,env-github,site-gen-antora[]
-
-ifdef::toml,env-github,site-gen-antora[]
-    *toml*::::
-
-      Tom's Obvious Minimal Language.
-endif::toml,env-github,site-gen-antora[]
-
-ifdef::yaml,env-github,site-gen-antora[]
-    *yaml*::::
-
-      YAML.
-endif::yaml,env-github,site-gen-antora[]
+  Output the encryption parameters as JSON.
 endif::[]
 
 *-h*, *--help*::
