@@ -635,96 +635,14 @@ fn basic_information() {
         ));
 }
 
-#[cfg(not(any(
-    feature = "cbor",
-    feature = "json",
-    feature = "msgpack",
-    feature = "toml",
-    feature = "yaml"
-)))]
-#[test]
-fn info_command_without_default_feature() {
-    command()
-        .arg("info")
-        .arg("-f")
-        .arg("cbor")
-        .arg("data/data.txt.scrypt")
-        .assert()
-        .failure()
-        .code(2);
-}
-
-#[cfg(feature = "cbor")]
-#[test]
-fn information_as_cbor() {
-    command()
-        .arg("info")
-        .arg("-f")
-        .arg("cbor")
-        .arg("data/data.txt.scrypt")
-        .assert()
-        .success()
-        .stdout(predicate::eq(
-            [
-                0xa3, 0x61, 0x4e, 0x19, 0x04, 0x00, 0x61, 0x72, 0x08, 0x61, 0x70, 0x01,
-            ]
-            .as_slice(),
-        ));
-}
-
 #[cfg(feature = "json")]
 #[test]
 fn information_as_json() {
     command()
         .arg("info")
-        .arg("-f")
-        .arg("json")
+        .arg("-j")
         .arg("data/data.txt.scrypt")
         .assert()
         .success()
         .stdout(predicate::eq(concat!(r#"{"N":1024,"r":8,"p":1}"#, '\n')));
-}
-
-#[cfg(feature = "msgpack")]
-#[test]
-fn information_as_msgpack() {
-    command()
-        .arg("info")
-        .arg("-f")
-        .arg("msgpack")
-        .arg("data/data.txt.scrypt")
-        .assert()
-        .success()
-        .stdout(predicate::eq(
-            [
-                0x83, 0xa1, 0x4e, 0xcd, 0x04, 0x00, 0xa1, 0x72, 0x08, 0xa1, 0x70, 0x01,
-            ]
-            .as_slice(),
-        ));
-}
-
-#[cfg(feature = "toml")]
-#[test]
-fn information_as_toml() {
-    command()
-        .arg("info")
-        .arg("-f")
-        .arg("toml")
-        .arg("data/data.txt.scrypt")
-        .assert()
-        .success()
-        .stdout(predicate::eq("N = 1024\nr = 8\np = 1\n"));
-}
-
-#[cfg(feature = "yaml")]
-#[test]
-fn information_as_yaml() {
-    command()
-        .arg("info")
-        .arg("-f")
-        .arg("yaml")
-        .arg("data/data.txt.scrypt")
-        .assert()
-        .success()
-        .stdout(predicate::eq("N: 1024\nr: 8\np: 1\n"));
 }
