@@ -14,6 +14,13 @@ All notable changes to this project will be documented in this file.
 The format is based on https://keepachangelog.com/[Keep a Changelog], and this
 project adheres to https://semver.org/[Semantic Versioning].
 
+== {compare-url}/v0.6.3\...HEAD[Unreleased]
+
+=== Changed
+
+* Reduce the output format of the encryption parameters to JSON only
+  ({pull-request-url}/315[#315])
+
 == {compare-url}/v0.6.2\...v0.6.3[0.6.3] - 2023-10-03
 
 === Removed
